# aleshka.site

./: .gitignore  LICENSE  Procfile  README.md  aleshka.py  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  cli.py  models.py  thumbnail.py
app/main/: logic.py  routes.py
app/static/.well-known/acme-challenge/: TSiu2dDsQMGtAF85c33EiEuo-MHxWRDoXeiT9Ctvyic  cSFnrsSjF3pelHuOBhwIPdO1M-Hl8U62tMjAC7dpxkw  kABd_SCuA9ivC6zyBIV-SFbUjC6SL4hgIGfnsOH8HjY  uklkL1_fWU8rJ_f5YNRrTs-KhHSxvm4AQQsixgJ_dl4  zCkwj-cZ-ueDoXLvCA73xygb2Qp_i8uM4NVIONMwA5k
app/static/content/: admin.css  main.css  sitemap.xml
app/static/scripts/: admin.js  main.js
app/templates/: admin.htm  base.htm  index.htm  login.htm  robots.txt
migrations/versions/: 0e4f9bbc0c44_.py  1be57b6eeb7b_update_tables.py  26afe48bf8c7_.py  2787922761ba_.py  36a516f6dcac_.py  4665e6b437e4_.py  64d15a8113a5_cats_table.py  6745bbd818c4_.py  81e2dad2ce8e_visitors_table.py  82418382ed41_.py  8b155fe06ab2_.py  cb4c5149f71c_.py  d28cc7b0ccf4_add_remote_address_of_visitor.py  de583f8e2035_.py  decc161197f6_drop_visitors_table.py  ee2db62fa9db_.py  f7a2d904a648_remove_visitors_delete_flag.py
